First subtask of the eighth task (config file does not work)

--- a/task-8/Code/src/autoservice/config/config.properties
+++ b/task-8/Code/src/autoservice/config/config.properties
@@ -1,6 +1,6 @@
 # garage-property
-canRemoveGaragePlace=true
-canAddGaragePlace=true
+canRemoveGaragePlace=false
+canAddGaragePlace=false
 
 # order-property
 canRescheduleOrder=true
