--- a/task-8/Code/src/autoservice/config/config.properties
+++ b/task-8/Code/src/autoservice/config/config.properties
@@ -1,6 +1,6 @@
 # garage-property
-canRemoveGaragePlace=false
-canAddGaragePlace=false
+canRemoveGaragePlace=true
+canAddGaragePlace=true
 
 # order-property
 canRescheduleOrder=true
