--- a/task-11/Code/pom.xml
+++ b/task-11/Code/pom.xml
@@ -57,6 +57,12 @@
             <version>1.4.14</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.0.1</version>
+        </dependency>
+
     </dependencies>
 
 
