--- a/task-14/Code/pom.xml
+++ b/task-14/Code/pom.xml
@@ -94,6 +94,13 @@
             <version>6.1.14</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.36</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 
