--- a/task-16/Code/pom.xml
+++ b/task-16/Code/pom.xml
@@ -158,7 +158,20 @@
                     <configLocation>src/main/java/resources/checkstyle.xml</configLocation>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <compilerArgument>-parameters</compilerArgument>
+                    <source>9</source>
+                    <target>9</target>
+                </configuration>
+            </plugin>
         </plugins>
+
+
     </build>
 
 
