--- a/task-16/Code/pom.xml
+++ b/task-16/Code/pom.xml
@@ -10,6 +10,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
             <version>6.1.14</version>
@@ -101,7 +107,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>5.6.0.Final</version>
+            <version>6.3.2.Final</version>
         </dependency>
 
         <dependency>
